Arreglo de estilos, sección diferenciadores

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 class="sh-underline"><img class="sh-truck" src="assets/img/truck.svg"
                                     alt="truck"></span></h3>
                         <h2 class="text-anim" data-effect="fade-in-right" data-split="char" data-delay="0.3"
-                            data-duration="1">Venta granel de Alcohol Etílico 96° <br>Desde <span class="hl"> 32,000 a
+                            data-duration="1">Venta granel de Alcohol Etílico 96° <br><span class="hl">Desde 32,000 a
                                 64,000 litros</span></h2>
                         <p class="text-anim" data-effect="fade-in-bottom" data-ease="power4.out">Nuestro objetivo
                             principal es brindar un servicio de calidad y proveer la mercancía solicitada en excelente
@@ -443,7 +443,7 @@
                 <h3 class="sub-heading is-border border-anim">Nuestro Proceso!<span class="sh-underline"><img
                             class="sh-truck" src="assets/img/truck.svg" alt="truck"></span></h3>
                 <h2 class="text-anim" data-effect="fade-in-right" data-split="char" data-delay="0.3" data-duration="1">
-                    ¿Cómo funciona tu <span class="hl">pedido?</span></h2>
+                    ¿Cómo funciona tu <span class="hl">pedido</span>?</h2>
                 <p class="text-anim" data-effect="fade-in-bottom" data-ease="power4.out">Estos son los pasos con los que gestionamos tu suministro de principio a fin con nuestra propia infraestructura,<br> asegurando abasto constante, seguridad en el trayecto y puntualidad en cualquier punto de México.</p>
             </div>
             <div class="row process-wrapper gy-lg-0 gy-4">
