--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <div class="slider-caption big">
                                     <div class="inner-layer">
                                         <div data-animation="fade-in-bottom" data-delay="0.5s"><span
-                                                class="text-outline-white">Alcohol Etílico 96° Neutro</span><br> Desde 32 mil a
+                                                class="text-outline-white">Alcohol Etílico 96° Neutro</span><br> Desde 25 mil a
                                             64 mil litros
                                         </div>
                                     </div>
@@ -127,7 +127,7 @@
                                 <div class="slider-caption small">
                                     <div class="inner-layer">
                                         <div data-animation="fade-in-bottom" data-delay="0.7s" data-duration="1s">Venta
-                                            a granel a partir de 32 mil litros, 44 mil litros hasta 64 mil litros
+                                            a granel a partir de 25 mil litros, 44 mil litros hasta 64 mil litros
                                             <br>Calidad neutra para procesos industriales de alta exigencia.
                                         </div>
                                     </div>
@@ -248,7 +248,7 @@
                                 class="sh-underline"><img class="sh-truck" src="assets/img/truck.svg"
                                     alt="truck"></span></h3>
                         <h2 class="text-anim" data-effect="fade-in-right" data-split="char" data-delay="0.3"
-                            data-duration="1">Venta granel de Alcohol Etílico 96° <br><span class="hl">Desde 32,000 a
+                            data-duration="1">Venta granel de Alcohol Etílico 96° <br><span class="hl">Desde 25,000 a
                                 64,000 litros</span></h2>
                         <p class="text-anim" data-effect="fade-in-bottom" data-ease="power4.out">Nuestro objetivo
                             principal es brindar un servicio de calidad y proveer la mercancía solicitada en excelente
@@ -278,7 +278,7 @@
                             estado de México</li>
                         <li><i class="fa-solid fa-check"></i>Contamos con nuestra propia empresa logística de transporte
                             especializado</li>
-                        <li><i class="fa-solid fa-check"></i>Surtimos en pipas a partir de 32 mil litros, 44 mil litros
+                        <li><i class="fa-solid fa-check"></i>Surtimos en pipas a partir de 25 mil litros, 44 mil litros
                             hasta 64 mil litros</li>
                     </ul>
                     <div class="btn-group wow fade-in-bottom" data-wow-delay="300ms">
@@ -330,7 +330,7 @@
                 <h3 class="sub-heading is-border border-anim">Nuestro Trasporte Especializado<span
                         class="sh-underline"><img class="sh-truck" src="assets/img/truck.svg" alt="truck"></span></h3>
                 <h2 class="text-anim" data-effect="fade-in-right" data-split="char" data-delay="0.3" data-duration="1">
-                    Envio nacional a granel <br><span class="hl">desde 32 mil, 44 mil y hasta 64 mil litros</span>
+                    Envio nacional a granel <br><span class="hl">desde 25 mil, 44 mil y hasta 64 mil litros</span>
                 </h2>
                 <p class="text-anim" data-effect="fade-in-bottom" data-ease="power4.out">Cobertura en todos los estados
                     de la República Mexicana.</p>
@@ -343,7 +343,7 @@
                         </div>
                         <div class="service-content">
                             <div class="service-icon"><img class="icon-pipa" src="assets/img/icon-pipa.svg"></img></div>
-                            <h3><a href="service-details.html">32 mil litros</a></h3>
+                            <h3><a href="service-details.html">25 mil litros</a></h3>
                             <p>La solución ideal para entregas ágiles y accesos urbanos restringidos. Perfecta para optimizar el inventario con flexibilidad y rapidez de respuesta.</p>
                         </div>
                     </div>
@@ -406,10 +406,10 @@
             <div class="row promo-item-wrapper gx-0">
                 <div class="col-lg-4">
                     <div class="promo-item">
-                        <i class="fal fa-hand-holding-usd"></i>
+                        <i class="fal fa-droplet"></i>
                         <div class="promo-content">
-                            <h3>Crédito disponible</h3>
-                            <p>Financiamiento ágil y flexible para optimizar el flujo de efectivo de tu empresa.</p>
+                            <h3>Calidad estándar neutra</h3>
+                            <p>Industria alimenticia, farmacéutica, cosmética, química, distribuidores, envasadoras y bebidas alcohólicas.</p>
                         </div>
                     </div>
                 </div>
@@ -417,17 +417,17 @@
                     <div class="promo-item">
                         <i class="fal fa-industry-windows"></i>
                         <div class="promo-content">
-                            <h3>Maquila propia</h3>
-                            <p>Control total de producción desde la melaza, garantizando abasto constante y precio competitivo.</p>
+                            <h3>Control total de producción</h3>
+                            <p>Control de producción desde la melaza, garantizando abasto constante y precio competitivo.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="promo-item">
-                        <i class="fal fa-droplet"></i>
+                        <i class="fal fa-box-check"></i>
                         <div class="promo-content">
-                            <h3>Calidad neutra</h3>
-                            <p>Alcohol puro e inoloro, certificado para exigencias farmacéuticas, alimenticias y cosméticas.</p>
+                            <h3>Certificaciones</h3>
+                            <p>Alcohol 96° puro e inoloro con certificados de calidad Kosher, COFEPRIS, USP, FEUM Pureza.</p>
                         </div>
                     </div>
                 </div>
@@ -607,7 +607,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-widget">
                             <a href="index.html" class="footer-logo"><img src="assets/img/logo.svg" alt="logo"></a>
-                            <p>Venta a granel de Alcohol Etílico 96° a partir de 32,000 mil litros con envio a todo
+                            <p>Venta a granel de Alcohol Etílico 96° a partir de 25,000 mil litros con envio a todo
                                 México.</p>
                         </div>
                     </div>
