Elimina 96 en segunda section

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 class="sh-underline"><img class="sh-truck" src="assets/img/truck.svg"
                                     alt="truck"></span></h3>
                         <h2 class="text-anim" data-effect="fade-in-right" data-split="char" data-delay="0.3"
-                            data-duration="1">Venta granel de Alcohol Etílico 96° <br><span class="hl">Desde 25,000 a
+                            data-duration="1">Venta granel de Alcohol Etílico <br><span class="hl">Desde 25,000 a
                                 64,000 litros</span></h2>
                         <p class="text-anim" data-effect="fade-in-bottom" data-ease="power4.out">Nuestro objetivo
                             principal es brindar un servicio de calidad y proveer la mercancía solicitada en excelente
