Cambios en 404, correo de contacto y validaciones formulario

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
                         <ul class="top-left">
                             <li><i class="fa-regular fa-phone"></i><a href="tel:3311471446">33 1147 1446</a></li>
                             <li><i class="fa-regular fa-envelope-dot"></i><a
-                                    href="mailto:alcoholesyderivadoslacima@gmail.com">alcoholesyderivadoslacima@gmail.com</a>
+                                    href="mailto:contacto@alcoholeslacima.com.mx">contacto@alcoholeslacima.com.mx</a>
                             </li>
                         </ul>
                         <div class="top-right">
@@ -63,21 +63,21 @@
                     <div class="header-menu-wrap">
                         <ul class="nav-menu">
                             <li>
-                                <a href="#inicio">Inicio</a>
+                                <a href="index.html#inicio">Inicio</a>
                             </li>
                             <li>
-                                <a href="#nosotros">Nosotros</a>
+                                <a href="index.html#nosotros">Nosotros</a>
                             </li>
                             <li>
-                                <a href="#envio-nacional">Envio Nacional</a>
+                                <a href="index.html#envio-nacional">Envio Nacional</a>
                             </li>
                             <li>
-                                <a href="#diferenciadores">Diferenciadores</a>
+                                <a href="index.html#diferenciadores">Diferenciadores</a>
                             </li>
                             <li>
-                                <a href="#nuestro-proceso">Nuestro Proceso</a>
+                                <a href="index.html#nuestro-proceso">Nuestro Proceso</a>
                             </li>
-                            <li><a href="#contacto">Contacto</a></li>
+                            <li><a href="index.html#contacto">Contacto</a></li>
                         </ul>
                         <div class="menu-right-item">
                             <div class="mobile-menu-icon">
@@ -124,11 +124,11 @@
                                 <h3>LA CIMA</h3>
                             </div>
                             <ul class="footer-links">
-                                <li><a href="#nosotros">Nosotros</a></li>
-                                <li><a href="#envio-nacional">Envio Nacional</a></li>
-                                <li><a href="#diferenciadores">Diferenciadores</a></li>
-                                <li><a href="#nuestro-proceso">Nuestro Proceso</a></li>
-                                <li><a href="#contacto">Contacto</a></li>
+                                <li><a href="index.html#nosotros">Nosotros</a></li>
+                                <li><a href="index.html#envio-nacional">Envio Nacional</a></li>
+                                <li><a href="index.html#diferenciadores">Diferenciadores</a></li>
+                                <li><a href="index.html#nuestro-proceso">Nuestro Proceso</a></li>
+                                <li><a href="index.html#contacto">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                                     <p><span>Telefóno:</span><a href="tel:3311471446">33 1147 1446</a></p>
                                 </li>
                                 <li>
-                                    <p><span>Envianos un correo:</span><a href="mailto:alcoholesyderivadoslacima@gmail.com">alcoholesyderivadoslacima@gmail.com</a></p>
+                                    <p><span>Envianos un correo:</span><a href="mailto:contacto@alcoholeslacima.com.mx">contacto@alcoholeslacima.com.mx</a></p>
                                     
                                 </li>
                             </ul>
@@ -162,7 +162,7 @@
         </div>
         <div class="copyright-area">
             © <span id="currentYear"></span> La Cima | Alcoholes y Derivados, Todos los derechos reservados. Diseñado
-            por: <a href="www.playerdesign.com.mx" target="_blank">PlayerDesign</a>
+            por: <a href="https://www.playerdesign.com.mx" target="_blank">PlayerDesign</a>
         </div>
     </footer>
     <!--/.footer-section-->
