Cambio correo de contacto e img post 1 quitar IA

--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
                         <ul class="top-left">
                             <li><i class="fa-regular fa-phone"></i><a href="tel:3311471446">33 1147 1446</a></li>
                             <li><i class="fa-regular fa-envelope-dot"></i><a
-                                    href="mailto:contacto@alcoholeslacima.com.mx">contacto@alcoholeslacima.com.mx</a>
+                                    href="mailto:dsolis@alcoholeslacima.com.mx">dsolis@alcoholeslacima.com.mx</a>
                             </li>
                         </ul>
                         <div class="top-right">
@@ -146,7 +146,7 @@
                                     <p><span>Telefóno:</span><a href="tel:3311471446">33 1147 1446</a></p>
                                 </li>
                                 <li>
-                                    <p><span>Envianos un correo:</span><a href="mailto:contacto@alcoholeslacima.com.mx">contacto@alcoholeslacima.com.mx</a></p>
+                                    <p><span>Envianos un correo:</span><a href="mailto:dsolis@alcoholeslacima.com.mx">dsolis@alcoholeslacima.com.mx</a></p>
                                     
                                 </li>
                             </ul>
